# bevy_vector_shapes

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: test.vectorshape.ron
examples/: alpha_mode.rs  asset_example.rs  billboard.rs  bloom.rs  bundles.rs  canvas_basic.rs  canvas_bloom.rs  canvas_low_res.rs  canvas_modes.rs  canvas_recursion.rs  gallery_2d.rs  gallery_3d.rs  healthbar_stress_test.rs  minimal_2d.rs  minimal_3d.rs  no_painter.rs  origin.rs  parenting.rs  parenting_commands.rs  parenting_painter.rs  render_layers.rs  retained.rs  textured.rs  thickness.rs  triangle.rs
src/: asset.rs  lib.rs
src/json/: mod.rs
src/painter/: canvas.rs  child_commands.rs  child_painter.rs  config.rs  mod.rs  shape_commands.rs  shape_painter.rs  system_param.rs
src/render/: batched_pipeline.rs  commands.rs  instanced_2d.rs  instanced_3d.rs  mod.rs  pipeline.rs  render_2d.rs  render_3d.rs
src/render/render_resource/: batched_uniform_buffer.rs  dynamic_uniform_buffer.rs  gpu_list.rs  mod.rs
src/render/shaders/: bindings.wgsl  constants.wgsl  core.wgsl  disc.wgsl  functions.wgsl  line.wgsl  ngon.wgsl  rect.wgsl
src/render/shaders/shapes/: disc.wgsl  line.wgsl  ngon.wgsl  rect.wgsl  tri.wgsl
src/shapes/: disc.rs  line.rs  mod.rs  rectangle.rs  regular_polygon.rs  triangle.rs
