[package]
authors = ["James O'Brien"]
description = "A library for rendering vector shapes using the Bevy game engine"
edition = "2021"
exclude = ["assets/*"]
homepage = "https://github.com/james-j-obrien/bevy_vector_shapes"
keywords = ["bevy", "gamedev", "graphics"]
license = "MIT OR Apache-2.0"
name = "bevy_vector_shapes"
repository = "https://github.com/james-j-obrien/bevy_vector_shapes"
version = "0.10.0"

[dependencies]
any_vec = "0.14.0"
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "std",
] }
bitfield = "0.19.0"
bitflags = "2.3"
nonmax = "0.5.5"
smallvec = "1.15.0"
wgpu = { version = "24.0.3", default-features = false }

[dev-dependencies]
bevy = { version = "0.16.0" }

[features]
default = ["x11"]
x11 = ["bevy/x11"]
